# hookwise

./: .code_review_input.diff  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  clear_cache.py  code_review_input.txt  docker-compose.ghcr.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  endpoints_full.py  fix_imports.py  fix_tasks.py  fix_tasks_final.py  generate_env_example.py  mypy.ini  mypy_errors.txt  outdated.json  patch.diff  pyproject.toml  requirements.txt  restore_tasks.py  restore_tasks_final.py  task.md  test_cw_connectivity.py  test_health_logic.py  test_minimal.py  verify_init.py  worker.py
hookwise/: __init__.py  api.py  auth.py  client.py  client.py.diff  commands.py  endpoints.py  extensions.py  metrics.py  models.py  routes.py  routing.py  tasks.py  tenantmap.py  utils.py  webhook.py
migrations/: env.py
templates/: 404.html  429.html  500.html  audit.html  base.html  dry_run_modal.html  form.html  history.html  history_rows.html  index.html  login.html  login_2fa.html  maintenance.html  routing.html  settings.html  setup_2fa.html  tenantmap.html
tests/: conftest.py  mock_redis.py  review_request.txt  test_activity_history.py  test_api_admin.py  test_api_history.py  test_app.py  test_auth_flow.py  test_backup_restore.py  test_call_llm.py  test_client.py  test_commands.py  test_cw_client.py  test_debug_api.py  test_dry_run.py  test_endpoints.py  test_get_activity_history.py  test_global_mapping_cache.py  test_health_check.py  test_health_task.py  test_index.py  test_ip_caching.py  test_ip_whitelist.py  (+21 more)
(+30 files in other folders)
